# SpicECS

./: CMakeLists.txt  README.md
include/: component.h  ecs.h  entity.h  entitymanager.h  system.h  systemmanager.h
include/ecs/componentfactory/: factory.h  factorymanager.h
include/ecs/reflection/: reflection.h
include/serialization/: componentserializer.cpp  entityserializer.h  sceneserializer.cpp  sceneserializer.h  serializable.h
src/: compile_commands.json  main.cpp
src/ecs/: component.h  ecs.h  entity.h  entitymanager.h
src/ecs/componentfactory/: factory.h  factorymanager.h
src/ecs/reflection/: reflection.h
src/example_components/: scenecomponent.h
src/serialization/: componentserializer.h  entityserializer.cpp  entityserializer.h  sceneserializer.h
src/util/: singleton.h
